--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,7 @@
     "pinia": "^2.1.7",
     "socket.io-client": "^4.7.2",
     "gsap": "^3.12.2",
-    "pixi.js": "^7.3.2"
-  },
-  "devDependencies": {
+    "pixi.js": "^7.3.2",
     "@vitejs/plugin-vue": "^4.5.0",
     "vite": "^5.0.0"
   }
