--- a/client/package.json
+++ b/client/package.json
@@ -9,13 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.4.0",
-    "vue-router": "^4.2.5",
-    "pinia": "^2.1.7",
-    "socket.io-client": "^4.7.2",
-    "gsap": "^3.12.2",
-    "pixi.js": "^7.3.2",
     "@vitejs/plugin-vue": "^4.5.0",
-    "vite": "^5.0.0"
+    "gsap": "^3.12.2",
+    "pinia": "^2.1.7",
+    "pixi.js": "^7.3.2",
+    "socket.io-client": "^4.7.2",
+    "three": "^0.182.0",
+    "vite": "^5.0.0",
+    "vue": "^3.4.0",
+    "vue-router": "^4.2.5"
   }
 }
