--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "gsap": "^3.12.2",
     "pinia": "^2.1.7",
     "pixi.js": "^7.3.2",
+    "qrcode.vue": "^3.8.0",
     "socket.io-client": "^4.7.2",
     "three": "^0.182.0",
     "vite": "^5.0.0",
